--- a/cocktails/static/templates/index.html
+++ b/cocktails/static/templates/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Cocktails</title>
-    <link rel="stylesheet" type="text/css" href="./public/styles/cocktails.css">
+    <link rel="stylesheet" type="text/css" href="./js/styles/cocktails.css">
     
   </head>
   <body>
-    <script type="text/babel" src="./build/bundle.js"></script>
+    <script type="text/babel" src="./js/buildJS/bundle.js"></script>
 
 	  <div id='content'></div>
 	
