--- a/cocktails/static/templates/index.html
+++ b/cocktails/static/templates/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Cocktails</title>
-    <link rel="stylesheet" type="text/css" href="../js/styles/cocktails.css">
+    <link rel="stylesheet" type="text/css" href="{% static /js/styles/cocktails.css %}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.js"></script>
@@ -10,7 +10,7 @@
   <body>
     <div id='content'></div>
     
-    <script type="text/javascript" src="../js/buildJS/bundle.js"></script>
+    <script type="text/javascript" src="{% static "/js/buildJS/bundle.js" %}"></script>
 
   </body>
 </html>
