--- a/cocktails/static/templates/index.html
+++ b/cocktails/static/templates/index.html
@@ -2,20 +2,18 @@
 <html>
   <head>
     <title>Cocktails</title>
-    <link rel="stylesheet" type="text/css" href="../js/styles/cocktails.css">
-    
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static "js/styles/cocktails.css" %}">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.js"></script>
   </head>
   <body>
-    <p> TEST. </p>
-    <div id='content'></div>
-    
-    <script type="text/javascript" src="{% static "js/buildJS/bundle.js" %}"></script>
+    <div class="container" />
+      <h1>GIMME A DRINK</h1>
+        <div id='content'></div>
+    </div>
 
+    <script type="text/javascript" src="{% static "js/buildJS/bundle.js" %}"></script>
   </body>
 </html>
 
