--- a/cocktails/static/templates/index.html
+++ b/cocktails/static/templates/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cocktails</title>
+    <title>You Look Thirsty</title>
+    {# Google Font #}
+    <link href='https://fonts.googleapis.com/css?family=Lora|Passion+One' rel='stylesheet' type='text/css'>
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static "js/styles/cocktails.css" %}">
+
   </head>
   <body>
     <div id='content'></div>
