--- a/cocktails/static/js/styles/cocktails.css
+++ b/cocktails/static/js/styles/cocktails.css
@@ -54,6 +54,25 @@ h1 h2 h3 {
   outline: none;
 }
 
+.searchContainer button {
+  font-family: inherit;
+  color: white;
+  background-color: gray;
+  border-radius: 25px;
+  border: none;
+}
+
+.searchModal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.6);
+  height: 100vh;
+  width: 100vw;
+}
+
 .ingredientContainer {
   padding-left: 20px;
 }
