--- a/cocktails/static/js/styles/cocktails.css
+++ b/cocktails/static/js/styles/cocktails.css
@@ -5,10 +5,6 @@ html {
 
 }
 
-h1 h2 h3 {
-
-}
-
 #content{
   
 }
@@ -68,9 +64,23 @@ h1 h2 h3 {
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(0, 0, 0, 0.3);
   height: 100vh;
   width: 100vw;
+}
+
+.searchModal > .inner {
+  position: fixed;
+  left: 33vw;
+  right: ;
+  top:10vh;
+  max-width:300px;
+  border-radius: 6px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, .4);
+  background-color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+
 }
 
 .ingredientContainer {
