--- a/cocktails/static/js/styles/cocktails.css
+++ b/cocktails/static/js/styles/cocktails.css
@@ -46,19 +46,24 @@ html {
 .searchContainer input {
   text-align: center;
   font-family: inherit;
+  font-size: 1em;
   border: none;
   outline: none;
 }
 
-.searchContainer button {
-  font-family: inherit;
-  color: white;
-  background-color: gray;
-  border-radius: 25px;
-  border: none;
+/* Styling for Modal and its button */
+.modalContainer {
+  text-align: right; 
+  padding-right: 20px;
 }
 
-.searchModal {
+.modalContainer button {
+  right: 5%;
+  font-size: .9em;
+  color: black;
+}
+
+.mainModal {
   position: fixed;
   top: 0;
   right: 0;
@@ -69,7 +74,7 @@ html {
   width: 100vw;
 }
 
-.searchModal > .inner {
+.mainModal > .inner {
   position: fixed;
   left: 33vw;
   right: ;
