--- a/cocktails/static/js/styles/cocktails.css
+++ b/cocktails/static/js/styles/cocktails.css
@@ -1,7 +1,7 @@
 html {
   font-family: 'Lora';
   font-size: 1.1em;
-  background-image: url('escheresque_ste.png');
+  background-image: url('washi.png');
 
 }
 
@@ -11,14 +11,14 @@ html {
 
 .appContainer {
   position: fixed;
-  left: 25vw;
   width: 500px;
+  left: 50vw;
+  margin-left: -250px;
   background-color: white;
-  height: 94vh;
+  height: 98vh;
   text-align: left;
-  padding: 10px;
   border-radius: 6px;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 5);
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, .2);
 }
 
 /* Passion One font for all headers on page; margin bottom none. */
@@ -33,6 +33,8 @@ html {
   font-size: 3em;
   text-align: center;
   margin-top: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .appContainer ul {
@@ -51,43 +53,6 @@ html {
   outline: none;
 }
 
-/* Styling for Modal and its button */
-.modalContainer {
-  text-align: right; 
-  padding-right: 20px;
-}
-
-.modalContainer button {
-  right: 5%;
-  font-size: .9em;
-  color: black;
-}
-
-.mainModal {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.3);
-  height: 100vh;
-  width: 100vw;
-}
-
-.mainModal > .inner {
-  position: fixed;
-  left: 33vw;
-  right: ;
-  top:10vh;
-  max-width:300px;
-  border-radius: 6px;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, .4);
-  background-color: white;
-  padding-left: 20px;
-  padding-right: 20px;
-
-}
-
 .ingredientContainer {
   padding-left: 20px;
 }
@@ -97,6 +62,44 @@ html {
 }
 
 .detailContainer {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+/* Styling for Modal and its button */
+.modalContainer {
+  text-align: right;
+  padding: 0 30px 0 0;
+}
+
+.modalContainer button {
+  bottom: 10vh;
+  font-size: .9em;
+  color: black;
+}
+
+.mainModal {
+  position: fixed;
+  text-align: center;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.6);
+  height: 100vh;
+  width: 100vw;
+}
+
+.mainModal > .inner {
+  position: fixed;
+  text-align: left;
+  left: 50%;
+  margin-left: -160px;
+  top:10vh;
+  width:300px;
+  border-radius: 6px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, .4);
+  background-color: white;
   padding-left: 20px;
   padding-right: 20px;
 }
