--- a/cocktails/static/js/styles/cocktails.css
+++ b/cocktails/static/js/styles/cocktails.css
@@ -103,3 +103,19 @@ html {
   padding-left: 20px;
   padding-right: 20px;
 }
+
+.mainModal > .inner input {
+  text-align: left;
+  font-size: 1em;
+  display: block;
+  width: 40%;
+  margin-left: 1em;
+}
+
+.mainModal > .inner button {
+  text-align: left;
+  font-size: 1em;
+  display: block;
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
