--- a/cocktails/static/js/styles/cocktails.css
+++ b/cocktails/static/js/styles/cocktails.css
@@ -31,9 +31,10 @@ html {
 }
 
 .appContainer h1 {
+  text-shadow: 1px 1px 0px rgba(0, 0, 0, .3); 
   font-size: 3em;
   text-align: center;
-  margin-top: 5px;
+  margin-top: 8px;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -52,6 +53,7 @@ html {
   font-size: 1em;
   border: none;
   outline: none;
+  margin-top: 3px;
 }
 
 .ingredientContainer {
