--- a/cocktails/static/templates/index.html
+++ b/cocktails/static/templates/index.html
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>You Look Thirsty</title>
-    {# Google Font #}
-    <link href='https://fonts.googleapis.com/css?family=Lora|Passion+One' rel='stylesheet' type='text/css'>
-    {% load staticfiles %}
-    <link rel="stylesheet" type="text/css" href="{% static "js/styles/cocktails.css" %}">
-    {% csrf_token %}
+{% extends "base.html" %}
+{% block content %}
+  
+<div id='content'></div>
+{% load staticfiles %}
+<script type="text/javascript" src="{% static "js/buildJS/bundle.js" %}"></script>
 
-  </head>
-  <body>
-    <div id='content'></div>
-    <script type="text/javascript" src="{% static "js/buildJS/bundle.js" %}"></script>
-  </body>
-</html>
+{% endblock content %}
 
