--- a/cocktails/static/js/styles/cocktails.css
+++ b/cocktails/static/js/styles/cocktails.css
@@ -50,7 +50,11 @@ html {
   font-family: inherit;
   font-size: 1em;
   margin-top: 3px;
-  padding-left: 30px;
+  padding: 0 30px;
+}
+
+.loginForm table {
+  margin: 0 auto 5px auto;
 }
 
 .searchContainer {
