--- a/cocktails/static/js/styles/cocktails.css
+++ b/cocktails/static/js/styles/cocktails.css
@@ -22,6 +22,7 @@ html {
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, .2);
   -webkit-transition: width .1, height .1, color 2s -webkit-transform 1s;
   transition: width .5s, height .5s, color 1s, transform 1s;
+  overflow: auto;
 }
 
 /* Passion One font for all headers on page; margin bottom none. */
@@ -63,11 +64,15 @@ html {
 
 .searchContainer input {
   text-align: center;
+  background-color: #F8F8F8;
   font-family: inherit;
-  font-size: 1em;
+  font-size: .9em;
+  height: 1.5em;
   border: none;
   outline: none;
   margin-top: 3px;
+  box-shadow: inset 1px 1px 2px rgba(0, 0, 0, .5);
+  border-radius: 4px;
 }
 
 .ingredientContainer {
@@ -84,8 +89,7 @@ html {
 }
 
 .detailContainer {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 0px 20px 20px;
 }
 
 .detailContainer li {
